--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trayb - O‘quv markazlar uchun innovatsion ta’lim platformasi</title>
-    <meta name="description" content="O‘quvchilarning natijasini yaxshilashga yordam beruvchi zamonaviy yondashuv.">
+    <title>Trayb - O'quv markazlar uchun innovatsion ta'lim platformasi</title>
+    <meta name="description" content="O'quvchilarning natijasini yaxshilashga yordam beruvchi zamonaviy yondashuv.">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,10 +29,10 @@
             <div class="container">
                 <div class="hero-content">
                     <span class="badge">Tez orada ishga tushadi</span>
-                    <h1 class="hero-title">O‘quv markazlar uchun <br> <span class="text-gradient">innovatsion ta’lim
+                    <h1 class="hero-title">O'quv markazlar uchun <br> <span class="text-gradient">innovatsion ta'lim
                             platformasi</span></h1>
-                    <p class="hero-desc">O‘quvchilarning natijasini yaxshilashga yordam beruvchi zamonaviy yondashuv.
-                        Savdo yoki CRM emas — haqiqiy ta’lim sifati uchun.</p>
+                    <p class="hero-desc">O'quvchilarning natijasini yaxshilashga yordam beruvchi zamonaviy yondashuv.
+                        Savdo yoki CRM emas — haqiqiy ta'lim sifati uchun.</p>
                     <a href="#waitlist" class="btn btn-primary">Platformaga qiziqish bildirish</a>
                 </div>
             </div>
@@ -46,17 +46,17 @@
                     <div class="card">
                         <div class="icon">📉</div>
                         <h3>Motivatsiya pasayishi</h3>
-                        <p>O‘quvchilar o‘quv jarayonida qiziqishni yo‘qotib, maqsaddan chalg‘iydilar.</p>
+                        <p>O'quvchilar o'quv jarayonida qiziqishni yo'qotib, maqsaddan chalg'iydilar.</p>
                     </div>
                     <div class="card">
                         <div class="icon">👁️</div>
                         <h3>Nazorat yetishmasligi</h3>
-                        <p>O‘quvchining haqiqiy o‘zlashtirish darajasi va bo‘shliqlari o‘z vaqtida aniqlanmaydi.</p>
+                        <p>O'quvchining haqiqiy o'zlashtirish darajasi va bo'shliqlari o'z vaqtida aniqlanmaydi.</p>
                     </div>
                     <div class="card">
                         <div class="icon">🔌</div>
                         <h3>Aloqa uzilishi</h3>
-                        <p>Darsdan tashqari vaqtda o‘qituvchi va o‘quvchi o‘rtasida samarali muloqot yo‘q.</p>
+                        <p>Darsdan tashqari vaqtda o'qituvchi va o'quvchi o'rtasida samarali muloqot yo'q.</p>
                     </div>
                 </div>
             </div>
@@ -72,21 +72,21 @@
                             <span class="check">✓</span>
                             <div>
                                 <h3>Rivojlanishni kuzatish</h3>
-                                <p>Har bir o‘quvchining dinamikasini raqamli tahlil qilish imkoniyati.</p>
+                                <p>Har bir o'quvchining dinamikasini raqamli tahlil qilish imkoniyati.</p>
                             </div>
                         </li>
                         <li>
                             <span class="check">✓</span>
                             <div>
-                                <h3>Tizimlashtirilgan ta’lim</h3>
-                                <p>Tartibsiz jarayonlarni aniq va o‘lchanadigan tizimga aylantirish.</p>
+                                <h3>Tizimlashtirilgan ta'lim</h3>
+                                <p>Tartibsiz jarayonlarni aniq va o'lchanadigan tizimga aylantirish.</p>
                             </div>
                         </li>
                         <li>
                             <span class="check">✓</span>
                             <div>
-                                <h3>Natijaga yo‘naltirilganlik</h3>
-                                <p>Shunchaki qatnashish emas, balki real bilim o‘sishiga fokus qaratish.</p>
+                                <h3>Natijaga yo'naltirilganlik</h3>
+                                <p>Shunchaki qatnashish emas, balki real bilim o'sishiga fokus qaratish.</p>
                             </div>
                         </li>
                     </ul>
@@ -99,9 +99,9 @@
             <div class="container">
                 <h2 class="section-title">Kimlar uchun?</h2>
                 <div class="tags-wrapper">
-                    <span class="tag">O‘quv markaz egalari</span>
+                    <span class="tag">O'quv markaz egalari</span>
                     <span class="tag">Metodistlar</span>
-                    <span class="tag">O‘qituvchilar jamoasi</span>
+                    <span class="tag">O'qituvchilar jamoasi</span>
                 </div>
             </div>
         </section>
@@ -111,10 +111,10 @@
             <div class="container">
                 <div class="form-wrapper">
                     <h2 class="form-title">Trayb platformasiga erta kirish</h2>
-                    <p class="form-desc">Agar siz o‘quv markazingizda real natijani oshirishni istasangiz, ma’lumot
-                        qoldiring. Biz siz bilan bog‘lanamiz.</p>
+                    <p class="form-desc">Agar siz o'quv markazingizda real natijani oshirishni istasangiz, ma'lumot
+                        qoldiring. Biz siz bilan bog'lanamiz.</p>
 
-                    <form name="waitlist" method="POST" data-netlify="true" class="contact-form">
+                    <form id="waitlist-form" class="contact-form">
                         <div class="form-group">
                             <label for="name">Ism va familiya</label>
                             <input type="text" id="name" name="name" placeholder="Ismingizni kiriting" required>
@@ -126,7 +126,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="center">O‘quv markaz nomi</label>
+                            <label for="center">O'quv markaz nomi</label>
                             <input type="text" id="center" name="center" placeholder="Markaz nomini kiriting" required>
                         </div>
 
@@ -135,7 +135,8 @@
                             <input type="text" id="role" name="role" placeholder="Masalan: Direktor, Metodist" required>
                         </div>
 
-                        <button type="submit" class="btn btn-primary btn-block">So‘rov yuborish</button>
+                        <button type="submit" id="submit-btn" class="btn btn-primary btn-block">So'rov yuborish</button>
+                        <p id="form-message" class="form-message"></p>
                     </form>
                 </div>
             </div>
@@ -148,6 +149,53 @@
             <p class="footer-note">Tez orada ishga tushadi</p>
         </div>
     </footer>
+
+    <script>
+        document.getElementById('waitlist-form').addEventListener('submit', async function (e) {
+            e.preventDefault();
+
+            const submitBtn = document.getElementById('submit-btn');
+            const formMessage = document.getElementById('form-message');
+
+            submitBtn.disabled = true;
+            submitBtn.textContent = 'Yuborilmoqda...';
+            formMessage.textContent = '';
+            formMessage.className = 'form-message';
+
+            const data = {
+                data: [{
+                    Name: document.getElementById('name').value,
+                    Phone: document.getElementById('phone').value,
+                    Company: document.getElementById('center').value,
+                    Position: document.getElementById('role').value
+                }]
+            };
+
+            try {
+                const response = await fetch('https://sheetdb.io/api/v1/d75m8nray6ijq', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(data)
+                });
+
+                if (response.ok) {
+                    formMessage.textContent = "✓ So'rovingiz muvaffaqiyatli yuborildi! Tez orada siz bilan bog'lanamiz.";
+                    formMessage.className = 'form-message success';
+                    document.getElementById('waitlist-form').reset();
+                } else {
+                    throw new Error('Xatolik yuz berdi');
+                }
+            } catch (error) {
+                formMessage.textContent = "✗ Xatolik yuz berdi. Iltimos, qaytadan urinib ko'ring.";
+                formMessage.className = 'form-message error';
+            } finally {
+                submitBtn.disabled = false;
+                submitBtn.textContent = "So'rov yuborish";
+            }
+        });
+    </script>
 
 </body>
 
