fix: SheetDB ustun nomlari to'g'rilandi

--- a/index.html
+++ b/index.html
@@ -164,10 +164,11 @@
 
             const data = {
                 data: [{
-                    Name: document.getElementById('name').value,
-                    Phone: document.getElementById('phone').value,
-                    Company: document.getElementById('center').value,
-                    Position: document.getElementById('role').value
+                    name: document.getElementById('name').value,
+                    phone: document.getElementById('phone').value,
+                    center: document.getElementById('center').value,
+                    role: document.getElementById('role').value,
+                    date: new Date().toLocaleString('uz-UZ')
                 }]
             };
 
