fix: Button matnlari o'zgartirildi

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <nav class="nav">
                 <a href="#" class="logo">Trayb</a>
-                <a href="#waitlist" class="btn btn-sm">Kirish uchun yozilish</a>
+                <a href="#waitlist" class="btn btn-sm">Sinab ko'rish</a>
             </nav>
         </div>
     </header>
@@ -33,7 +33,7 @@
                             platformasi</span></h1>
                     <p class="hero-desc">O'quvchilarning natijasini yaxshilashga yordam beruvchi zamonaviy yondashuv.
                         Savdo yoki CRM emas — haqiqiy ta'lim sifati uchun.</p>
-                    <a href="#waitlist" class="btn btn-primary">Platformaga qiziqish bildirish</a>
+                    <a href="#waitlist" class="btn btn-primary">Platformani ishlatib ko'rish</a>
                 </div>
             </div>
         </section>
