--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -229,15 +229,13 @@
             formMessage.textContent = '';
             formMessage.className = 'form-message';
 
-            const data = {
-                data: [{
-                    name: document.getElementById('name').value,
-                    phone: document.getElementById('phone').value,
-                    center: document.getElementById('center').value,
-                    role: document.getElementById('role').value,
-                    date: new Date().toLocaleString('uz-UZ')
-                }]
-            };
+            const data = [{
+                "Ism": document.getElementById('name').value,
+                "Telefon raqam": document.getElementById('phone').value,
+                "O'quv markaz": document.getElementById('center').value,
+                "Lavozim": document.getElementById('role').value,
+                "Lid tushgan vaqti": new Date().toLocaleString('uz-UZ')
+            }];
 
             try {
                 const response = await fetch('https://sheetdb.io/api/v1/d75m8nray6ijq', {
